# centurion-linky

./: .env.docker  .env.example  .env.prod.example  .gitignore  CLAUDE.md  docker-compose.dev.yml  docker-compose.prod.yml
backend/: Dockerfile  Dockerfile.prod  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1a4ddc383aa2_add_settlements_table.py  35d07f8a12af_add_ai_personas_cultural_profiles_.py  3af698e4c682_add_bookings_and_payments_tables.py  487eda490e39_initial_schema.py  4e8c4d592a47_create_clinics_and_users_tables.py  7bb6bbe508b3_add_ab_tests_consultation_performances_.py  863ca1052999_add_satisfaction_scores_table.py  909b4a4f145c_add_messenger_accounts_customers_.py  a3f1b2c4d5e6_add_missing_fk_indexes.py  b4g2c3d5e7f8_add_audit_logs_table.py  c5h3d4e6f7g8_add_vector_columns.py  d08a674d9803_add_medical_terms_table.py  d6i4e5f6g7h8_add_llm_usage.py  e7j5f6g7h8i9_add_llm_quota.py  ebdc179ab4ff_add_crm_events_and_satisfaction_surveys_.py  f8k6g7h8i9j0_add_health_and_contraindications.py  g9l7h8i9j0k1_add_packages.py  h0m8i9j0k1l2_add_consultation_protocols.py  i1n9j0k1l2m3_add_followup_rules.py  j2o0k1l2m3n4_add_medical_documents.py  k3p1l2m3n4o5_add_treatment_photos_and_translation_reports.py
backend/app/: config.py  dependencies.py  main.py
backend/app/ai/: ab_test_engine.py  llm_router.py  simulation_engine.py  tracked_llm.py  usage_tracker.py
backend/app/core/: cache.py  database.py  exceptions.py  logging.py  pagination.py  query_utils.py  resilience.py  security.py
backend/app/messenger/: base.py  (+6 more)
backend/tests/: conftest.py
(+368 files in other folders)
